--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>www.koduj.com</h1>
+<!doctype html>
+<html lang="pl">
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Koduj.com">
+    <meta name="description" content="koduj">
+    <meta name="author" content="Zespół Koduj.com">
+    <title>Koduj.com</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+</head>
+<body ng-controller="AppCtrl">
+    <h1>Koduj.com</h1>
+</body>
+</html>
