--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl" ng-app="KodujApp">
+<html lang="pl" ng-app="KodujComApp">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Koduj.com">
@@ -10,10 +10,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-sanitize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/koduj.js"></script>
     <title>Koduj.com</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     
@@ -70,45 +69,65 @@
         </div>
     </section>
     
-<!-- LEARN section -->
-    <section id="learn">
-        <div class="content">
-            <main>Chcesz programować?</main>
-            <aside>Poznaj miejsca, w których możesz to zrobić</aside>
+    <!-- LEARN section -->
+    <div ng-controller="LearnController">
+        <section id="learn" ng-hide="learnSectionIsHidden()">
+            <div class="content">
+                <main>Chcesz programować?</main>
+                <aside>Poznaj miejsca, w których możesz to zrobić</aside>
 
-            <nav>
-                <figure id="online">
-                    <div class="img"></div>
-                    <figcaption>ucz się</figcaption>
-                    <figcaption>online</figcaption>
-                </figure>
-                <figure id="group">
-                    <div class="img"></div>
-                    <figcaption>ucz się</figcaption>
-                    <figcaption>w grupie</figcaption>
-                </figure>
-            </nav>
-        </div>
-    </section>
+                <nav>
+                    <figure id="online" ng-click="selectOnlineSection()">
+                        <div class="img"></div>
+                        <figcaption>ucz się</figcaption>
+                        <figcaption>online</figcaption>
+                    </figure>
+                    <figure id="group" ng-click="selectGroupSection()">
+                        <div class="img"></div>
+                        <figcaption>ucz się</figcaption>
+                        <figcaption>w grupie</figcaption>
+                    </figure>
+                </nav>
+            </div>
+        </section>
+        <section id="onlineSection" ng-show="onlineSectionIsChoosen">
+            <!--TYMCZASOWA IKONA :) :)-->
+            <img src="https://i.imgur.com/91pqnZT.png" style="float: right; margin-top: 3%;margin-right: 5%" ng-click="hideOnlineSection()"/>
+        </section>
+        <section id="groupSection" ng-show="groupSectionIsChoosen">
+            <!--TYMCZASOWA IKONA :) :)-->
+            <img src="https://i.imgur.com/91pqnZT.png" style="float: right; margin-top: 3%;margin-right: 5%" ng-click="hideGroupSection()"/>
+        </section>
+    </div>
 
 <!-- TEACH section -->
-    <section id="teach">
-        <div class="content">
-            <main>Chcesz nauczać programowania?</main>
-            <aside>Dowiedz się, jak to zrobić</aside>
+    <div ng-controller="TeachController">
+        <section id="teach" ng-hide="teachSectionIsHidden()">
+            <div class="content">
+                <main>Chcesz nauczać programowania?</main>
+                <aside>Dowiedz się, jak to zrobić</aside>
 
-            <nav>
-                <figure id="club">
-                    <figcaption>załóż klub</figcaption>
-                    <figcaption>kodowania</figcaption>
-                </figure>
-                <figure id="workshops">
-                    <figcaption>zorganizuj</figcaption>
-                    <figcaption>warsztaty</figcaption>
-                </figure>
-            </nav>
-        </div>
-    </section>
+                <nav>
+                    <figure id="club" ng-click="selectClubSection()">
+                        <figcaption>załóż klub</figcaption>
+                        <figcaption>kodowania</figcaption>
+                    </figure>
+                    <figure id="workshops" ng-click="selectWorkshopsSection()">
+                        <figcaption>zorganizuj</figcaption>
+                        <figcaption>warsztaty</figcaption>
+                    </figure>
+                </nav>
+            </div>
+        </section>
+        <section id="clubSection" ng-show="clubSectionIsChosen">
+            <!--TYMCZASOWA IKONA :) :)-->
+            <img src="https://i.imgur.com/91pqnZT.png" style="float: right; margin-top: 3%;margin-right: 5%" ng-click="hideClubSection()"/>
+        </section>
+        <section id="workshopsSection" ng-show="workshopsSectionIsChosen">
+            <!--TYMCZASOWA IKONA :) :)-->
+            <img src="https://i.imgur.com/91pqnZT.png" style="float: right; margin-top: 3%;margin-right: 5%" ng-click="hideWorkshopsSection()"/>
+        </section>
+    </div>
 
 <!-- WHY section -->
     <section id="why">
