Przygotuj pasek nawigacji i dodaj ikony

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="top"></div>
         <div class="content">
 
-            <div id="logo">LOGO</div>
+            <div id="logo"><img src="assets/logo.png" alt="Logo koduj.com"/></div>
 
             <nav>
                 <ul>
