Restore removed content

--- a/index.html
+++ b/index.html
@@ -108,13 +108,19 @@
                 <div class="about_online">
                     <h1>Scratch</h1>
 
-                    <p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i
-                        młodzieży (od 8 lat wzwyż) podsta
+                    <p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i młodzieży (od
+                        8 lat wzwyż) podstawprogramowania oraz środowisko programistyczne służące do tworzenia i
+                        uruchamiania programów w tym języku. Scratch umożliwia łatwe tworzenie interaktywnych
+                        historyjek, animacji, gier, muzyki. Programowanie odbywa się w sposób wizualny - elementy języka
+                        mają kształt puzzli a poprzez przeciąganie mogą być układane w określonym porządku. W ten sposób
+                        tworzy się kod przypisany określonemu obiektowi. Obiekty mogą reagować na zdarzenia zewnętrzne.
+                        Wygląd postaci przypisanych do obiektów można wybierać z zasobnika, tworzyć lub importować z
+                        zewnątrz.</p>
 
                     <h2>Kursy</h2>
 
-                    <p>Stworzona aplikacja może być grą, historyjką, a nawet animacją. Tworzone programy mogą
-                        odtwarzać dźwięki, rysować, p
+                    <p>Stworzona aplikacja może być grą, historyjką, a nawet animacją. Tworzone programy mogą odtwarzać
+                        dźwięki, rysować, porównywać kolory i wiele więcej!</p>
                 </div>
                 <div class="icons_online">
                     <div class="link">
