Fix carousel styling

--- a/index.html
+++ b/index.html
@@ -101,78 +101,79 @@
         <img src="https://i.imgur.com/91pqnZT.png" style="float: right; margin-top: 3%;margin-right: 5%"
              ng-click="hideOnlineSection()"/>
 
+        <div class="content">
+            <ul rn-carousel rn-carousel-control class="slides">
+                <li class="scratch">
+                    <div class="about_online">
+                        <h1>Scratch</h1>
 
-        <ul rn-carousel rn-carousel-control class="slides">
-            <li class="scratch">
-                <div class="about_online">
-                    <h1>Scratch</h1>
+                        <p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i młodzieży (od
+                            8 lat wzwyż) podstawprogramowania oraz środowisko programistyczne służące do tworzenia i
+                            uruchamiania programów w tym języku. Scratch umożliwia łatwe tworzenie interaktywnych
+                            historyjek, animacji, gier, muzyki. Programowanie odbywa się w sposób wizualny - elementy języka
+                            mają kształt puzzli a poprzez przeciąganie mogą być układane w określonym porządku. W ten sposób
+                            tworzy się kod przypisany określonemu obiektowi. Obiekty mogą reagować na zdarzenia zewnętrzne.
+                            Wygląd postaci przypisanych do obiektów można wybierać z zasobnika, tworzyć lub importować z
+                            zewnątrz.</p>
 
-                    <p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i młodzieży (od
-                        8 lat wzwyż) podstawprogramowania oraz środowisko programistyczne służące do tworzenia i
-                        uruchamiania programów w tym języku. Scratch umożliwia łatwe tworzenie interaktywnych
-                        historyjek, animacji, gier, muzyki. Programowanie odbywa się w sposób wizualny - elementy języka
-                        mają kształt puzzli a poprzez przeciąganie mogą być układane w określonym porządku. W ten sposób
-                        tworzy się kod przypisany określonemu obiektowi. Obiekty mogą reagować na zdarzenia zewnętrzne.
-                        Wygląd postaci przypisanych do obiektów można wybierać z zasobnika, tworzyć lub importować z
-                        zewnątrz.</p>
+                        <h2>Kursy</h2>
 
-                    <h2>Kursy</h2>
-
-                    <p>Stworzona aplikacja może być grą, historyjką, a nawet animacją. Tworzone programy mogą odtwarzać
-                        dźwięki, rysować, porównywać kolory i wiele więcej!</p>
-                </div>
-                <div class="icons_online">
-                    <div class="link">
-                        <a href="http://scratch.mit.edu/"><img src="assets/learn_online/link.png" alt="Strona"/>
-
-                            <p>Strona</p>
-                        </a>
+                        <p>Stworzona aplikacja może być grą, historyjką, a nawet animacją. Tworzone programy mogą odtwarzać
+                            dźwięki, rysować, porównywać kolory i wiele więcej!</p>
                     </div>
-                    <div class="cost">
-                        <img src="assets/learn_online/cost.png" alt="Koszt"/>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://scratch.mit.edu/"><img src="assets/carousel_icons/link.png" alt="Strona"/>
 
-                        <p>Bezpłatny</p>
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Bezpłatny</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>8+</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Polski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Podstawowy</p>
+                        </div>
                     </div>
-                    <div class="age">
-                        <img src="assets/learn_online/age.png" alt="Wiek"/>
 
-                        <p>8+</p>
-                    </div>
-                    <div class="language">
-                        <img src="assets/learn_online/language.png" alt="Język"/>
-
-                        <p>Polski</p>
-                    </div>
-                    <div class="level">
-                        <img src="assets/learn_online/easy.png" alt="Poziom"/>
-
-                        <p>Podstawowy</p>
-                    </div>
-                </div>
-
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_lemon.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_donut.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_caramel.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_cheesecake_brownie.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_lemon.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_donut.jpg"/>
-            </li>
-            <li>
-                <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_caramel.jpg"/>
-            </li>
-        </ul>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_lemon.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_donut.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_caramel.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_cheesecake_brownie.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_lemon.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_donut.jpg"/>
+                </li>
+                <li>
+                    <img src="http://flexslider.woothemes.com/images/kitchen_adventurer_caramel.jpg"/>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <section id="groupSection" ng-show="groupSectionIsChoosen" class="animation animation-left">
