--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     var $targetId = $(this.hash), $targetAnchor = $('[name=' + this.hash.slice(1) + ']');
                     var $target = $targetId.length ? $targetId : $targetAnchor.length ? $targetAnchor : false;
                     if ($target) {
-                        var targetOffset = $target.offset().top - 60;
+                        var targetOffset = $target.offset().top;
 
                         $(this).click(function () {
                             $("#nav li a").removeClass("active");
@@ -57,11 +57,7 @@
 <header>
     <div id="top"></div>
     <div class="content">
-        <div id="logo">
-			<a href="#">
-			<img src="assets/logo1.png" alt="Logo koduj.com"/>
-			</a>
-		</div>
+        <div id="logo"><img src="assets/logo1.png" alt="Logo koduj.com"/></div>
 
         <nav>
             <ul>
@@ -111,7 +107,8 @@
                 <li id="scratch">
                     <div class="about_online">
                         <h1>Scratch</h1>
-						<p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i młodzieży (od
+
+                        <p>Scratch to edukacyjny język obiektowy, stworzony jako środek do nauczania dzieci i młodzieży (od
                             8 lat wzwyż) podstawprogramowania oraz środowisko programistyczne służące do tworzenia i
                             uruchamiania programów w tym języku. Scratch umożliwia łatwe tworzenie interaktywnych
                             historyjek, animacji, gier, muzyki. Programowanie odbywa się w sposób wizualny - elementy języka
@@ -158,8 +155,8 @@
                 <li id="khan_academy">
                                        
                     <div class="about_online">
-						<h1>Khan Academy</h1>
-						
+                        <h1>Khan Academy</h1>
+
                         <p>Khan Academy to organizacja non-profit, która chce zmienić raz na zawsze podejście 
                             do edukacji publicznej przez udostępnienie kształcenia na światowym poziomie wszędzie 
                             i dla każdego. Oprócz filmów wideo z polskim lektorem, zachęcamy do oglądania filmów 
