Rollback content change
Rollback content change in "Kodowanie to trzeci język"

--- a/index.html
+++ b/index.html
@@ -1900,19 +1900,17 @@
                     <h2>Kodowanie to trzeci język</h2>
 
                     <p>
-						By móc w pełni korzystać z możliwości dzisiejszego świata warto, prócz języka oczystego oraz obcego, znać i mowę komputerów. 
-						
-						Powinno się go uczyć w szkole obok języka ojczystego oraz obcego – napisała w artykule "The
+                        Powinno się go uczyć w szkole obok języka ojczystego oraz obcego – napisała w artykule "The
                         Third Language”
                         w New York Timesie Lisette Titre, która pracuje obecnie przy grze "Sims 4".
                     </p>
 
                     <p>
-                        Dlaczego? Bo kodowanie pomaga w rozwiązywaniu naszych problemów. Nim zaczniesz pisać
-                        jakikolwiek kod, potrzebujesz najpierw dobrze zrozumieć problem. 
-						Stosując myślenie obliczeniowe (pojęcie wprowadzone przez <a href="http://pl.wikipedia.org/wiki/Association_for_Computing_Machinery">Association for Computing Machinery<a/>), jako metodę rozwiązywania problemów opierającej się na technikach wykorzystywanych w informatyczne 
-						Wspomaga rozwój funkcji poznawczych, pamięć, koncetrację, analityczne myślenie, kojarzenie faktów oraz interpretacji zdarzeń. 
-						Dla przykładu wykorzystując powszechnie znaną w informatyce metodę "Dziel i zwyciężaj" uczymy się jak w życiu codzinnym dzielić problemy na części, łatwiejsze do rozwiązania.
+                        Dlaczego? Bo kodowanie pomaga w rozwiązywaniu naszych problemów. Jednak nim zaczniesz pisać
+                        jakikolwiek kod,
+                        potrzebujesz najpierw dobrze zrozumieć problem. Myślenie obliczeniowe pozwala nam rozbić problem
+                        na drobniejsze
+                        części dzięki czemu są łatwiejsze do rozwiązania.
                     </p>
 
                     <p>
