Change social media links
- Comment out twitter
- update reference to google plus

--- a/index.html
+++ b/index.html
@@ -2187,22 +2187,23 @@
             <div id="social">
                 <span id="find_us">Znajdziesz nas</span>
 
+
                         <span id="facebook">
                             <a target="_blank" href="https://www.facebook.com/kodujcom"><img src="assets/facebook.png"
                                                                                              alt="Facebook"/></a>
                         </span>
-
+						<!--
                         <span id="twitter">
                             <a target="_blank" href=""><img src="assets/twitter.png" alt="Twitter"/></a>
                         </span>
-
+						-->
                         <span id="youtube">
                             <a target="_blank" href="https://www.youtube.com/channel/UCKb10KVB1XCVYnnGEaXmP_Q"><img
                                     src="assets/youtube.png" alt="YouTube"/></a>
                         </span>
 
                         <span id="google_plus">
-                            <a target="_blank" href=""><img src="assets/googleplus.png" alt="Google Plus"/></a>
+                            <a target="_blank" href="https://plus.google.com/100919679106265815714"><img src="assets/googleplus.png" alt="Google Plus"/></a>
                         </span>
             </div>
         </div>
