Uncoment background movie
Uncoment background movie

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         // Embed YouTube video as a intro section background
         $(document).ready(function () {
-            //$('#site_wrapper').tubular({videoId: 'NCKvy4NDLB4'}); // where idOfYourVideo is the YouTube ID.
+            $('#site_wrapper').tubular({videoId: 'NCKvy4NDLB4'}); // where idOfYourVideo is the YouTube ID.
         });
 
     </script>
