--- a/index.html
+++ b/index.html
@@ -1881,12 +1881,15 @@
             <aside>Poznaj korzyści z programowania.</aside>
             <nav>
                 <figure id="language" ng-click="selectLanguageSection()">
+                    <div class="img"><img src="assets/language.png" alt="nauka online"/></div>
                     <figcaption>Kodowanie<br>to trzeci język</figcaption>
                 </figure>
                 <figure id="poland" ng-click="selectPolandSection()">
+                    <div class="img"><img src="assets/poland.png" alt="nauka online"/></div>
                     <figcaption>Polska potrzebuje<br>programistów</figcaption>
                 </figure>
                 <figure id="consumption" ng-click="selectConsumptionSection()">
+                    <div class="img"><img src="assets/consumption.png" alt="nauka online"/></div>
                     <figcaption>Dosyć biernej<br>konsumpcji</figcaption>
                 </figure>
             </nav>
