Add title, description, keywords and robots

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="pl" ng-app="KodujComApp">
 <head>
+    <title>Programowanie to przyszłość. Poznaj świat kodowania i nowych technologii!</title>
+
     <meta charset="utf-8">
-    <meta name="description" content="Koduj.com">
+    <meta name="description" content="Koduj.com jest skierowane dla wszystkich zainteresowanych nauką programowania. Naszym celem jest promocja nowych technologii, dzielenie się wiedzą i zwiększanie kompetencji uczniów, nauczycieli i wolontariuszy.">
+    <meta name="keywords" content="programowanie, kurs programowania, warsztaty programowania, nowe technologie, warsztaty, kodowanie, szkoła, informatyka, nauka programowania, języki programowania, programista, lekcje informatyki, kluby kodowania, klub programowania, programowanie gier komputerowych, robotyka, Java, C#, PHP, Delphi, C++, Scratch, program edukacyjny">
     <meta name="author" content="Zespół Koduj.com">
+    <meta name="robots" content="index, follow">
+
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/angular-carousel.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
