Correct text in section Khan Academy

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="about_online">
                         <h1>Khan Academy</h1>
 
-                        <p>Khan Academy to organizacja non-profit, która chce zmienić raz na zawsze podejście 
+                        <p>Khan Academy to organizacja non-profit, która deklaruje, że chce zmienić raz na zawsze podejście 
                             do edukacji publicznej przez udostępnienie kształcenia na światowym poziomie wszędzie 
                             i dla każdego. Oprócz filmów wideo z polskim lektorem, zachęcamy do oglądania filmów 
                             w oryginale z napisami w języku polskim.</p>
