Add new category in section learn online
Added to new cards: Edx and Women to Code

--- a/index.html
+++ b/index.html
@@ -435,8 +435,7 @@
                         </div>
                     </div>
                 </li>
-                      </li>
-                <li id="programmers_forge">
+                <li id="Pascal_course">
                     <div class="about_online">
                         <h1>Pascal</h1>
 
@@ -454,6 +453,94 @@
                     <div class="icons_online">
                         <div class="link">
                             <a href="http://kursprogramowania.edu.pl/pascal/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Nie określono</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Polski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>podstawowy</p>
+                        </div>
+                    </div>
+                     </li>
+                <li id="edX_platform">
+                    <div class="about_online">
+                        <h1>edX</h1>
+
+                        <p>Platforma w języku angielskim to wspólna inicjatywa Uniwersytetu Harvarda oraz Massachusetts Institute of Technology. 
+                        Umożliwia uczestnictwo w kursach najlepszych na świecie uczelni. 
+                        Duży wybór kursów z zakresu Computer Science, a wśród nich Engineering Software as a Service
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>wszystko dla osób o ścisłych umysłach
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="https://www.edx.org/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Nie określono</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>średniozaawansowany, zaawansowany </p>
+                        </div>
+                    </div>
+                </li>
+                <li id="Women_toCode">
+                    <div class="about_online">
+                        <h1>Kobiety do Kodu: kurs Javy</h1>
+
+                        <p>Blog Ani i Jakuba, gdzie dzielą się tym jak uczyć się Javy, 
+                        opisując swoje doświad­czenia i dbając, aby tek­sty były zrozumiałe i należy­cie wyjaśnione. </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>Lekcja pierwsza zaczyna się od podstaw programowania, czym jest Java i jak przygotować środowisko do programowania. 
+                        Idea ich kursu jest inna — nie uczą o wszystkich aspektach języka Java, 
+                        o jego technikaliach, czy szczegółach, które nie są za często używane. Zamiast tego kurs krok po kroku
+                        prowadzi przez tworzenie pozornie prostej aplikacji, omawiając po drodze te elementy języka, które są 
+                        potrzebne w codziennej pracy. Każda lekcja zawiera odniesienie do dokumentacji i oficjalnych kursów, 
+                        dzięki czemu można uzupełniać swoją wiedzę na bieżąco. </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://kobietydokodu.pl/kurs-javy/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
 
                                 <p>Strona</p>
                             </a>
