Add new category in section learn online
Added Teaching Tree card

--- a/index.html
+++ b/index.html
@@ -522,6 +522,47 @@
                         </div>
                     </div>
                 </li>
+                   <li id="teaching_tree">
+                    <div class="about_online">
+                        <h1>Teaching Tree</h1>
+
+                        <p>Otwarta platforma w języku angielskim umożliwiająca szybki dostęp do zamieszczonych w internecie materiałów związanych z wybranym zagadnieniem edukacyjnym. 
+                        Jeśli natychmiast potrzebna jest Wam wiedza o algorytmach, MVC czy programowaniu obiektowym, warto tam zajrzeć.
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>od wstępu do informatyki i języków programowania po Web Development i grafikę z animacją
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://www.teachingtree.co/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Bez limitu</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>średniozaawansowany, zaawansowany </p>
+                        </div>
+                </li>
                 <li id="Women_toCode">
                     <div class="about_online">
                         <h1>Kobiety do Kodu: kurs Javy</h1>
