--- a/index.html
+++ b/index.html
@@ -522,6 +522,47 @@
                         </div>
                     </div>
                 </li>
+                      <li id="Udemy_platform">
+                    <div class="about_online">
+                        <h1>Udemy</h1>
+
+                        <p>Platforma w jezyku angielskim z dużą ilością kursów z wielu różnych dziedzin, w tym – z programowania. 
+                        Warto poszukać czegoś dla siebie.
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>znajduje się tam większość języków programowania, programowanie mobilne
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="https://www.udemy.com/courses/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>część kursów jest płatna, część jest dostępna za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Bez limitu</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>podstawowy, średniozaawansowany, zaawansowany</p>
+                        </div>
+                </li>
                    <li id="teaching_tree">
                     <div class="about_online">
                         <h1>Teaching Tree</h1>
