Add new category in section learn online
Add Programmr as a new card

--- a/index.html
+++ b/index.html
@@ -479,6 +479,47 @@
                         </div>
                     </div>
                      </li>
+                <li id="Programmr_platform">
+                    <div class="about_online">
+                        <h1>Programmr</h1>
+
+                        <p>Programmr jest właściwie takim CodeCademy ale dla bardziej zaawansowanych programistów. 
+                        Znajdziecie tu Androida, Javę i wiele innych bardziej zaawansowanych tematów niż oferuje CodeCademy.
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>jQuery, Java, PHP, C++, Python, C# , Ruby, Android
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://www.programmr.com/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Nie określono</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>średniozaawansowany, zaawansowany</p>
+                        </div>
+                </li>
                 <li id="edX_platform">
                     <div class="about_online">
                         <h1>edX</h1>
