Add new category in section learn online
Add Codecademy to cards

--- a/index.html
+++ b/index.html
@@ -477,8 +477,50 @@
 
                             <p>Poziom<br>podstawowy</p>
                         </div>
-                    </div>
                      </li>
+                        <li id="Codecademy_platform">
+                    <div class="about_online">
+                        <h1>Codecademy</h1>
+
+                        <p>Tutoriale do różnych języków dostepne w języku angielskim, fracuskim, hiszpańskim. 
+                        Materiał podzielono na krótkie, interaktywne lekcje. Proces nauki jest bardzo wciągający - nie tylko czytasz ale również 
+                        kodujesz i na bieżąco obserwujesz efekty. Platforma jest chwalona za interaktywność kursów i feedback ze strony serwisu. 
+                        Do uczenia się podstaw kodowania z pomocą Codecademy przyznał się niedawno Michael Bloomberg, burmistrz Nowego Jorku..
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>HTML, CSS, Javascript, jQuery, Python, Ruby, PHP
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://www.codecademy.com/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>Nie określono</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski, Francuski, Hiszpański, Portugalski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>podstawowy, średniozaawansowany</p>
+                        </div>
+                </li>
                 <li id="Programmr_platform">
                     <div class="about_online">
                         <h1>Programmr</h1>
