Add new category in section learn online
Add Scratch Junior to the cards

--- a/index.html
+++ b/index.html
@@ -478,6 +478,48 @@
                             <p>Poziom<br>podstawowy</p>
                         </div>
                      </li>
+                             <li id="Scratch_Junior">
+                    <div class="about_online">
+                        <h1>Scratch Junior</h1>
+
+                        <p>To kolejny projekt MIT, który ma na celu uczenie dzieci w wieku przedszkolnym kreatywności, 
+                        twórczego myślenia i rozwiązywania problemów poprzez kodowanie. Scratch Jr jest uzupełnieniem dostępnego od 1998 roku 
+                        programistycznego narzędzia Scratch, przy pomocy którego uczniowie w wieku 8-13 lat stworzyli ponad 2,3 miliona interaktywnych gier, historii, animacji.
+                        </p>
+
+                        <h2>Kursy</h2>
+
+                        <p>Scratch Junior
+                        </p>
+                    </div>
+                    <div class="icons_online">
+                        <div class="link">
+                            <a href="http://www.scratchjr.org/" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
+
+                                <p>Strona</p>
+                            </a>
+                        </div>
+                        <div class="cost">
+                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
+
+                            <p>Za darmo</p>
+                        </div>
+                        <div class="age">
+                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
+
+                            <p>5-7 lat</p>
+                        </div>
+                        <div class="language">
+                            <img src="assets/carousel_icons/language.png" alt="Język"/>
+
+                            <p>Angielski</p>
+                        </div>
+                        <div class="level">
+                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
+
+                            <p>Poziom<br>podstawowy</p>
+                        </div>
+                </li>
                         <li id="Codecademy_platform">
                     <div class="about_online">
                         <h1>Codecademy</h1>
